--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <title>Home Food Mobile</title>
+   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
