feat: Add Open Graph meta tag generation and WeChat JS-SDK signature for improved social sharing.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover"
     />
     <meta name="theme-color" content="#ffffff" />
-    <title>Home Fresh</title>
+    <title>Home Fresh - 美味鲜到家</title>
+    <meta name="description" content="Fresh homemade food delivered to your door. Check out on HomeFresh! 美味鲜到家" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Home Fresh - 美味鲜到家" />
+    <meta property="og:description" content="Fresh homemade food delivered to your door. Check out on HomeFresh! 美味鲜到家" />
+    <meta property="og:image" content="https://www.homefreshfoods.ai/favicon.svg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.homefreshfoods.ai" />
+    <meta property="og:site_name" content="Home Fresh" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Home Fresh - 美味鲜到家" />
+    <meta name="twitter:description" content="Fresh homemade food delivered to your door. Check out on HomeFresh! 美味鲜到家" />
+    <meta name="twitter:image" content="https://www.homefreshfoods.ai/favicon.svg" />
     <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
